# ml-microservice

./: .env  .gitignore  LICENSE  Makefile  README.md  config.py  dbmodel.py  main.py  pyproject.toml  runner.py  setup.cfg
data/: db.sqlite
model/: collection.py  model.ipynb  model.py  model_service.py  preparation.py
src/config/: .env  config.py
src/db/: db_model.py
src/model/: model_service.py
src/model/models/: rf_v1  rf_v3
src/model/pipeline/: collection.py  model.py  preparation.py
